Added API testing

--- a/reports/index.html
+++ b/reports/index.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">Automation Test Report</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Feb 13, 2025 01:12:12 pm</span></a>
+<a href="#"><span class="badge badge-primary">Feb 14, 2025 01:12:12 am</span></a>
 </li>
 </ul>
 </div>
@@ -79,9 +79,9 @@
           tag=""
           device="">
           <div class="test-detail">
-            <p class="name">errorValidations</p>
+            <p class="name">checkCourse</p>
             <p class="text-sm">
-              <span>1:12:16 pm</span> / <span>00:00:03:318</span>
+              <span>1:12:13 am</span> / <span>00:00:01:559</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -89,10 +89,10 @@
 <div class="detail-head">
 <div class="p-v-10">
 <div class="info">
-<h5 class="test-status text-pass">errorValidations</h5>
-<span class='badge badge-success'>02.13.2025 1:12:16 pm</span>
-<span class='badge badge-danger'>02.13.2025 1:12:19 pm</span>
-<span class='badge badge-default'>00:00:03:318</span>
+<h5 class="test-status text-pass">checkCourse</h5>
+<span class='badge badge-success'>02.14.2025 1:12:13 am</span>
+<span class='badge badge-danger'>02.14.2025 1:12:14 am</span>
+<span class='badge badge-default'>00:00:01:559</span>
 &middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
@@ -105,9 +105,9 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>1:12:19 pm</td>
+        <td>1:12:14 am</td>
         <td>
-          errorValidations Test Passed
+          checkCourse Test Passed
         </td>
       </tr>
   </tbody>
@@ -129,13 +129,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Feb 13, 2025 01:12:12 pm</h3>
+<h3>Feb 14, 2025 01:12:12 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Feb 13, 2025 01:12:19 pm</h3>
+<h3>Feb 14, 2025 01:12:15 am</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -205,7 +205,7 @@
 </div></div>
 <script>
 var timeline = {
-"errorValidations":3.318
+"checkCourse":1.559
 };
 </script>
 <div class="row">
