--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-TestSuite" class="navigator-link ">
-                    <span>F:\Automation Project\Amazon.in\FrameWrokTesting\error.xml</span>
+                    <span>F:\Automation Project\Amazon.in\FrameWrokTesting\testRunnerXml\apiTesting.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-TestSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-TestSuite" title="FrameWrokTesting.tests.LoginErrorest" class="method navigator-link" hash-for-method="errorValidations">errorValidations</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-TestSuite" title="FrameWrokTesting.APITesting.responseValidation" class="method navigator-link" hash-for-method="checkCourse">checkCourse</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-TestSuite -->
@@ -120,14 +120,14 @@
           <div class="suite-TestSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">FrameWrokTesting.tests.LoginErrorest</span>
+              <span class="class-name">FrameWrokTesting.APITesting.responseValidation</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="errorValidations">
-                  </a> <!-- errorValidations -->
-                  <span class="method-name">errorValidations</span>
+                  <a name="checkCourse">
+                  </a> <!-- checkCourse -->
+                  <span class="method-name">checkCourse</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel TestSuite -->
         <div panel-name="test-xml-TestSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">F:\Automation Project\Amazon.in\FrameWrokTesting\error.xml</span>
+            <span class="header-content">F:\Automation Project\Amazon.in\FrameWrokTesting\testRunnerXml\apiTesting.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +148,7 @@
   &lt;test name=&quot;LoginTest&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;edge&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;FrameWrokTesting.tests.LoginErrorest&quot;/&gt;
+      &lt;class name=&quot;FrameWrokTesting.APITesting.responseValidation&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- LoginTest --&gt;
 &lt;/suite&gt; &lt;!-- TestSuite --&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'errorValidations')
-data.setCell(0, 2, 'FrameWrokTesting.tests.LoginErrorest')
-data.setCell(0, 3, 4517);
+data.setCell(0, 1, 'checkCourse')
+data.setCell(0, 2, 'FrameWrokTesting.APITesting.responseValidation')
+data.setCell(0, 3, 1564);
 window.suiteTableData['TestSuite']= { tableData: data, tableDiv: 'times-div-TestSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-TestSuite">
               </div> <!-- times-div-TestSuite -->
             </div> <!-- times-div -->
@@ -223,19 +223,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">FrameWrokTesting.tests.LoginErrorest</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">browserSetup(edge)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
+              <div class="chronological-class-name">FrameWrokTesting.APITesting.responseValidation</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">errorValidations</span>
-                <span class="method-start">4186 ms</span>
+                <span class="method-name">checkCourse</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeWindow</span>
-                <span class="method-start">8714 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
